# qgis

./: CMakeLists.txt
.github/workflows/: backport.yml  build-docker.yml  code_layout.yml  flake8.yml  mingw64.yml
cmake/: FindPyQt4.cmake  FindPyQtAndroid.py  FindSIP.cmake  FindSIPAndroid.py  SIPMacros.cmake
cmake/modules/: ECMQt4To5Porting.cmake
images/: images.qrc
ms-windows/osgeo4w/: package-nightly.cmd
python/: CMakeLists.txt
python/core/: conversions.sip  core.sip  qgsclipper.sip  qgsfeature.sip
python/core/composer/: qgscomposerscalebar.sip
python/gui/: gui.sip  qgisinterface.sip
src/: CMakeLists.txt
src/analysis/interpolation/: qgsinterpolator.cpp  qgstininterpolator.cpp
src/app/: CMakeLists.txt  main.cpp  qgisapp.cpp  qgisapp.h  qgisappinterface.cpp  qgisappinterface.h  qgsclipboard.cpp  qgsfeatureaction.cpp  qgsidentifyresultsdialog.cpp  qgsidentifyresultsdialog.h  qgsmaptoolannotation.cpp  qgsmaptooloffsetcurve.cpp  qgsoptions.cpp  qgsrasterlayerproperties.cpp  qgsvectorlayerproperties.cpp  qgsvectorlayerproperties.h
src/app/composer/: qgscomposer.cpp
src/app/gps/: qgsgpsinformationwidget.cpp  qgsgpsinformationwidget.h  qgsgpsmarker.cpp  qgsgpsmarker.h
src/app/pluginmanager/: qgspluginmanager.cpp
src/core/: CMakeLists.txt  qgis.cpp  qgis.h  qgsapplication.cpp  qgsapplication.h  qgsclipper.cpp  qgscoordinatereferencesystem.cpp  qgsdatasourceuri.cpp  qgsdistancearea.cpp  qgsexpressionlexer.ll  qgsgeometry.cpp  qgsgeometry.cpp.orig  qgslabel.cpp  qgsmaprendererparalleljob.cpp  qgsnumeric.h  qgsplugininterface.h  qgspoint.cpp  qgspoint.h  qgsproviderregistry.cpp  qgsproviderregistry.h  qgstolerance.cpp  qgsvectorlayer.cpp
src/core/composer/: qgscomposerlabel.cpp  qgscomposition.cpp  qgscomposition.h
src/core/gps/: qgsgpsdetector.cpp  qgsqtlocationconnection.cpp  qgsqtlocationconnection.h
src/core/symbology-ng/: qgsrendererv2.cpp  qgsrendererv2registry.cpp  qgsrendererv2registry.h
src/gui/: CMakeLists.txt  qgisgui.h  qgisinterface.h  qgsattributedialog.cpp  qgsattributeeditor.cpp  qgsattributeforminterface.h  qgscomposerview.cpp  qgsmapcanvasitem.cpp  qgsmapcanvasitem.h  qgsmaplayerpropertiesfactory.h  qgsmaptooltouch.cpp  qgsmaptooltouch.h  qgsoptionsdialogbase.cpp  qgsrubberband.h  qgsvectorlayerpropertiespage.h
src/gui/editorwidgets/: qgsvaluemapwidgetfactory.cpp
src/gui/symbology-ng/: qgscategorizedsymbolrendererv2widget.cpp  qgsgraduatedsymbolrendererv2widget.cpp
src/plugins/: qgisplugin.h
src/plugins/evis/eventbrowser/: evisimagedisplaywidget.cpp  evisimagedisplaywidget.h
src/plugins/globe/: CMakeLists.txt  globe_plugin.cpp  globe_plugin.h  globe_plugin_dialog.cpp  globe_plugin_dialog.h  globe_plugin_dialog_guibase.ui  globefeatureidentify.cpp  globefeatureidentify.h  globefrustumhighlight.cpp  globefrustumhighlight.h  qgsglobefeaturecursor.cpp  qgsglobefeaturecursor.h  qgsglobefeatureidentify.cpp  qgsglobefeatureidentify.h  qgsglobefeatureutils.h  qgsglobefrustumhighlight.cpp  qgsglobefrustumhighlight.h  qgsglobeinterface.cpp  qgsglobeinterface.h  qgsglobelayerpropertiesfactory.cpp  qgsglobelayerpropertiesfactory.h  qgsglobeplugindialog.cpp  qgsglobeplugindialog.h  qgsglobeplugindialog.ui  qgsglobestyleutils.h  qgsglobetilesource.cpp  qgsglobetilesource.h  qgsglobevectorlayerconfig.h  qgsglobevectorlayerproperties.cpp  qgsglobevectorlayerpropertiespage.cpp  qgsglobevectorlayerpropertiespage.h  qgsglobevectorlayerpropertiespage.ui  qgsosgearthfeatureoptions.h  qgsosgearthfeaturesource.cpp  qgsosgearthfeaturesource.h  qgsosgearthtilesource.cpp  qgsosgearthtilesource.h
src/plugins/globe/featuresource/: qgsglobefeaturecursor.h  qgsglobefeatureoptions.h  qgsglobefeaturesource.cpp  qgsglobefeaturesource.h  qgsglobefeatureutils.h
src/plugins/globe/python/: CMakeLists.txt  globe.sip  qgsglobefeatureutils.sip  qgsglobeinterface.sip
src/plugins/globe/python/osg/: Image.h  Node.sip  Vec2d.sip  Vec2f.sip  Vec3d.sip  Vec3f.sip  osg.sip
src/plugins/globe/python/osg/osg/: Node.sip  Object.sip  osg.sip
src/plugins/globe/python/osg/osgViewer/: View.sip  Viewer.sip  osgViewer.sip
src/plugins/globe/python/osg/tmp/: Vec2f.sip  Vec3d.sip  Vec3f.sip
src/plugins/globe/python/osgEarth/Features/: FeatureSourceIndexNode.sip  Features.sip
src/plugins/globe/python/osgEarth/Symbology/: Geometry.sip
src/plugins/globe/python/osgEarth/Util/: FeatureQueryTool.sip  Util.sip
src/plugins/globe/python/osgearth/: Config.sip  GeoData.sip  ImageLayer.sip  Layer.sip  Map.sip  ModelLayer.sip  SpatialReference.sip  Terrain.sip  osgearth.sip
src/plugins/globe/python/osgearth/Util/: FeatureQueryTool.sip  Util.sip
src/plugins/globe/python/osgearth/features/: Feature.sip  features.sip
src/plugins/globe/python/osgearth/symbology/: symbology.sip
src/providers/postgres/: qgspostgresprovider.cpp
src/providers/spatialite/: qgsspatialiteprovider.cpp  qgsspatialiteprovider.h
src/python/: qgspythonutils.h  qgspythonutilsimpl.cpp
src/server/services/wfs/: qgswfsdescribefeaturetype.cpp
src/server/services/wms/: qgswmsgetcapabilities.cpp
src/ui/: qgisapp.ui  qgsabout.ui  qgsengineconfigdialog.ui  qgsgpsinformationwidgetbase.ui  qgsoptionsbase.ui  qgspluginmanagerbase.ui
tests/src/analysis/: testqgsvectoranalyzer.cpp
tests/src/app/: testqgisappclipboard.cpp
tests/src/core/: CMakeLists.txt  regression1141.cpp  regression992.cpp  test_template.cpp  testcontrastenhancements.cpp  testqgsapplication.cpp  testqgsatlascomposition.cpp  testqgscomposerhtml.cpp  testqgscomposerlabel.cpp  testqgscomposermap.cpp  testqgscomposerpaper.cpp  testqgscomposerpicture.cpp  testqgscomposerrotation.cpp  testqgscomposerscalebar.cpp  testqgsexpression.cpp  testqgsgeometry.cpp  testqgsmaprenderer.cpp  testqgspoint.cpp  testqgsrasterlayer.cpp  testqgsspatialindex.cpp  testqgsstylev2.cpp  testziplayer.cpp
tests/src/gui/: testqgsrasterhistogram.cpp
tests/src/providers/: testqgswcsprovider.cpp
